--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Titre de la page</title>
   <meta charset="utf-8">
   <!-- <link rel="stylesheet" href="style.css"> -->
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
   ...
