--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!doctype html>
-<html lang="fr">
-<head>
-  <title>Titre de la page</title>
-  <meta charset="utf-8">
-  <!-- <link rel="stylesheet" href="style.css"> -->
-  <script src="js/app.js"></script>
-</head>
-<body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
-</body>
+<html class="no-js" lang="en" ng-app="powervote">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foundation | Welcome</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <script src="js/vendor/modernizr.js"></script>
+    <script src="js/modules/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/models/models.js"></script>
+  </head>
+  <body ng-controller="tablesCtrl">
+    
+    <div class="row">
+        <table>
+          <caption>{{tableau1.titre}}</caption>
+          <thead>
+            <tr>
+             <th></th>
+             <th ng-repeat="column in tableau1.colonnes">{{column.titre}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="line in tableau1.lignes">
+            <th>{{line.titre}}</th>
+            <th ng-repeat="event in tableau1.events | limitTo:5">{{event.nbreTotal}}</th>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
